fixed timeline pointers on smaller screens

--- a/src/components/base/TimelineDetail.module.css
+++ b/src/components/base/TimelineDetail.module.css
@@ -14,7 +14,7 @@
 	}
 
 	.dot{
-		left: 0.2rem!important;
+		left: 0.92rem!important;
 	}
 
 }
